--- a/src/index.css
+++ b/src/index.css
@@ -97,14 +97,14 @@ main {
   width: 100%;
 }
 
-@media (min-height: 40em) and (max-width: 43em) {
+@media (min-height: 40em) and (max-width: 45em) {
   main {
     flex-wrap: nowrap;
     flex-direction: column;
   }
 }
 
-@media (min-height: 27em) and (min-width: 43em) {
+@media (min-height: 27em) and (min-width: 45em) {
   main {
     flex-wrap: nowrap;
     flex-direction: column;
